@@ -253,6 +253,51 @@ class PyPIStage(BaseStage):
             raise self.UpstreamError("%s status on GET %s" %
                                      (response.status_code, url))
 
+        if not self.xom.is_replica():  # we are a master
+            # check that we got a fresh enough page
+            serial = int(response.headers["X-PYPI-LAST-SERIAL"])
+            newest_serial = self.pypimirror.get_project_serial(projectname)
+            if serial < newest_serial:
+                raise self.UpstreamError(
+                            "%s: pypi returned serial %s, expected at least %s",
+                            projectname, serial, newest_serial)
+            elif serial > newest_serial:
+                self.pypimirror.set_project_serial(projectname, serial)
+
+            threadlog.debug("%s: got response with serial %s", projectname, serial)
+
+            # check returned url has the same normalized name
+            ret_projectname = response.url.strip("/").split("/")[-1]
+            assert normalize_name(projectname) == normalize_name(ret_projectname)
+
+
+        # parse simple index's link and perform crawling
+        assert response.text is not None, response.text
+        result = parse_index(response.url, response.text)
+        perform_crawling(self, result)
+        releaselinks = list(result.releaselinks)
+
+        # first we try to process mirror links without an explicit write transaction.
+        # if all links already exist in storage we might then return our already
+        # cached information about them.  Note that _dump_project_cache() will
+        # implicitely update cache timestamps.
+        def map_and_dump():
+            # both maplink() and _dump_project_cache() will not modify
+            # storage if there are no changes so they operate fine within a
+            # read-transaction if nothing changed.
+            entries = [self.filestore.maplink(link) for link in releaselinks]
+            return self._dump_project_cache(projectname, entries, serial)
+
+        try:
+            return map_and_dump()
+        except self.keyfs.ReadOnly:
+            pass
+
+        # we know that some links changed in this simple page.
+        # On the master we need to write-update, on the replica
+        # we wait for the changes to arrive (changes were triggered
+        # by our http request above) because have no direct write
+        # access to the db other than through the replication thread.
         if self.xom.is_replica():
             # XXX this code path is not currently tested, handle with care!
             # we have already triggered the master above
@@ -273,45 +318,10 @@ class PyPIStage(BaseStage):
                 return links
             raise self.UpstreamError("no cache links from master for %s" %
                                      projectname)
-
-        # check that we got a fresh enough page
-        serial = int(response.headers["X-PYPI-LAST-SERIAL"])
-        newest_serial = self.pypimirror.get_project_serial(projectname)
-        if serial < newest_serial:
-            raise self.UpstreamError(
-                        "%s: pypi returned serial %s, expected at least %s",
-                        projectname, serial, newest_serial)
-        elif serial > newest_serial:
-            self.pypimirror.set_project_serial(projectname, serial)
-
-        threadlog.debug("%s: got response with serial %s", projectname, serial)
-
-        # check returned url has the same normalized name
-        ret_projectname = response.url.strip("/").split("/")[-1]
-        assert normalize_name(projectname) == normalize_name(ret_projectname)
-
-
-        # parse simple index's link and perform crawling
-        assert response.text is not None, response.text
-        result = parse_index(response.url, response.text)
-        perform_crawling(self, result)
-        releaselinks = list(result.releaselinks)
-
-        # first we try to process mirror links without an explicit write transaction.
-        # if all links already exist in storage we might then return our already
-        # cached information about them.
-        def map_and_dump():
-            # both maplink() and _dump_project_cache() will not modify
-            # storage if there are no changes so they operate fine within a
-            # read-transaction if nothing changed.
-            entries = [self.filestore.maplink(link) for link in releaselinks]
-            return self._dump_project_cache(projectname, entries, serial)
-
-        try:
-            return map_and_dump()
-        except self.keyfs.ReadOnly:
-            # something changed and we are in a readonly-transaction so
-            # we need to repeat within a write transaction
+        else:
+            # we are on the master and something changed and we are
+            # in a readonly-transaction so we need to start a write
+            # transaction and perform map_and_dump.
             self.keyfs.restart_as_write_transaction()
             return map_and_dump()
 
